--- a/index.html
+++ b/index.html
@@ -3,23 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/fonts.css" />
     <link rel="stylesheet" href="styles/post-style.css" />
     <link rel="stylesheet" href="styles/styles.css" />
     <style>
         * {
-            box-sizing: border-box;
-            margin: 0;
+            margin: 0 auto;
             padding: 0;
         }
     </style>
     <link rel="icon" href="./assets/favicon.png" type="image/png">
     <title>OrusTeam</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4837109912697569"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
+        <ul id="header-menu">
+            <a href="#">
+                <li>Contato</li>
+            </a>
+            <a id="discord-button" href="https://discord.com/invite/Q265Bv7fvc">
+                <li>Entrar no Discord</li>
+            </a>
+        </ul>
         <h1 id="banner-title">The <span>Dragon Ball</span> Add-on</h1>
         <h1 id="banner-description">Desperte o seu poder interior, supere desafios incríveis e enfrente inimigos
             temíveis do universo de Dragon Ball</h1>
@@ -34,15 +43,36 @@
                 únicas com NPCs. O mundo foi renovado, com locais lendários cheios de desafios e segredos. Suas escolhas
                 entre o bem e o mal moldarão sua jornada. Está pronto para explorar esse universo e se tornar o mais
                 forte?</p>
-            <img id="post-banner" src="./assets/dbe-ki-blast.png">
+            <img id="post-banner" src="./assets/dbe-icon.png">
             <p id="post-description">Novidades:<br>- Adicionado sistema de masterização<br>- Adicionado atributos
                 infinitos</p>
             <div class="container">
                 <button id="download-button">Baixar</button>
-            </div>.
+            </div>
         </div>
         <!-- <div id="content-list"></div>
         <script src="./index.js"></script> -->
+
+        <table id="version-list">
+            <tr>
+                <th>Nome</th>
+                <th>Versão do jogo</th>
+                <th>Baixar</th>
+            </tr>
+            <tr>
+                <td>Dragon Evolution v3.0.0</td>
+                <td id="game-version">1.18.40</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Dragon Evolution v4.0.0</td>
+                <div id="game-version">
+                    <td>1.21.40</td>
+                </div>
+                <td><a href="./assets/background.png" download="">Baixar</a></td>
+            </tr>
+        </table>
+
     </main>
     <aside></aside>
     <footer></footer>
