--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>OrusTeam</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4837109912697569"
         crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-4837109912697569">
 </head>
 
 <body>
